# alpha_ml

./: .gitignore  pyproject.toml
src/ml_alpha/: config.py
src/ml_alpha/data/: ingestion.py  validator.py
tests/test_data/: test_ingestion.py  test_validator.py
